# balor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
admin/: Cargo.toml  Trunk.toml  index.html
admin/src/: lib.rs
backend/: Cargo.toml
backend/src/: main.rs
packaging/: balor.rb
