[package]
name = "admin"
version = "0.1.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Balor admin UI: Yew single-page app for managing listeners."

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
js-sys = "0.3.69"
uuid = { version = "1.8.0", features = ["serde", "v4", "js"] }
yew = { version = "0.21.0", features = ["csr"] }
gloo-net = { version = "0.5.0", features = ["json"] }
gloo-utils = "0.2.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.69", features = [
    "EventTarget",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlAnchorElement",
    "Url",
    "Blob",
    "BlobPropertyBag",
] }
