[package]
name = "backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Balor backend: Axum control plane and L4/L7 balancer runtime."

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
time = { version = "0.3.36", features = ["formatting", "parsing"] }

hyper = { version = "1.3.1", features = ["client", "http1", "http2", "server"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
parking_lot = "0.12.2"
tokio-util = { version = "0.7.11", features = ["rt"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
argon2 = "0.5.3"
rand = "0.8.5"
rand_core = "0.6.4"
prometheus = "0.13.4"
futures = "0.3.31"
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
hyper-util = { version = "0.1", features = ["tokio"] }
base64 = "0.22"
sha1 = "0.10"
